# xDIMScreen-locator

./: .gitignore  .gitmodules  Cargo.toml  README.md  apriltag-wrapper.h  build.rs
benches/: apriltag-detection.rs  apriltag-parallel.rs  camera.rs
examples/: apriltag-detection.rs  egui-plotter-demo.rs  object-locator.rs  opencv-demo.rs  tagged-object-detection.rs  tagged-object-visualize.rs
resources/scripts/: apriltag.html  blender-addon.py  fractal-apriltag.html  tag-packing-fractal.py
resources/tagobj/: fractal-tag.tagobj  handheld-screen-v2.tagobj  handheld-screen.tagobj  simple-tag-36h11.tagobj  simple-tag.tagobj  wand.tagobj
src/: camera.rs  lib.rs  main.rs
src/net/: mod.rs  packet.rs
src/tag/: apriltag.rs  error.rs  locator.rs  mod.rs  tagged_object.rs
src/tag/locator/: mod.rs  tests.rs
src/utils/: mod.rs
src/visualize/: chart.rs  mod.rs  utils.rs
tests/: test_locator.rs
