[package]
name = "xDIMScreen_locator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
eframe = "0.31.1"
egui = "0.31.1"
egui-plotter = "0.4.0"
env_logger = "0.11.8"
libc = "0.2.174"
map-macro = "0.3.0"
nalgebra = "0.34.0"
opencv = { version = "0.95.1", default-features = false, features = ["clang-runtime", "calib3d", "imgproc", "highgui", "videoio"] }
plotters = "0.3.7"
serde = "1.0.219"
serde_json = "1.0.142"

[build-dependencies]
bindgen = "0.72.0"
