[package]
name = "xDIMScreen_locator"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/MqCreaple/xDIMScreen-locator"

[dependencies]
chrono = "0.4.41"
eframe = "0.32.0"
egui = "0.32.0"
egui-plotter = "0.4.0"
env_logger = "0.11.8"
libc = "0.2.174"
log = "0.4.27"
map-macro = "0.3.0"
nalgebra = "0.34.0"
opencv = { version = "0.95.1", default-features = false, features = ["clang-runtime", "calib3d", "imgcodecs", "imgproc", "highgui", "videoio"] }
plotters = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[build-dependencies]
bindgen = "0.72.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[patch.crates-io]
egui-plotter = { git = "https://github.com/MqCreaple/egui-plotter" }

[features]
visualize = []

[[bench]]
name = "apriltag-detection"
harness = false

[[bench]]
name = "camera"
harness = false
