[package]
name = "xDIMScreen_locator"
version = "0.1.2"
description = "Locate objects with apriltags."
authors = [ "MqCreaple <gmq14159@gmail.com>" ]
edition = "2024"
repository = "https://github.com/MqCreaple/xDIMScreen-locator"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
eframe = "0.33"
egui = "0.33"
egui-plotter = { git = "https://github.com/MqCreaple/egui-plotter" }
env_logger = "0.11.8"
libc = "0.2.178"
log = "0.4.29"
map-macro = "0.3.0"
nalgebra = "0.34.1"
opencv = { version = "0.98", default-features = false, features = ["clang-runtime", "calib3d", "imgcodecs", "imgproc", "highgui", "videoio"] }
plotters = "0.3.7"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
statrs = "0.18.0"

[build-dependencies]
bindgen = "0.72.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
visualize = []

[[bench]]
name = "apriltag-detection"
harness = false

[[bench]]
name = "camera"
harness = false

[[bench]]
name = "apriltag-parallel"
harness = false
